--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,495 @@
 <resources>
     <string name="app_name">MeMaww</string>
+
+
+    <string-array name="countries_array_starting_with_choose_country">
+        <item>Choose Country</item>
+        <item>GHANA</item>
+        <item>AFGHANISTAN</item>
+        <item>ALBANIA</item>
+        <item>ALGERIA</item>
+        <item>AMERICAN SAMOA</item>
+        <item>ANDORRA</item>
+        <item>ANGOLA</item>
+        <item>ANGUILLA</item>
+        <item>ANTARCTICA</item>
+        <item>ANTIGUA AND BARBUDA</item>
+        <item>ARGENTINA</item>
+        <item>ARMENIA</item>
+        <item>ARUBA</item>
+        <item>AUSTRALIA</item>
+        <item>AUSTRIA</item>
+        <item>AZERBAIJAN</item>
+        <item>BAHAMAS</item>
+        <item>BAHRAIN</item>
+        <item>BANGLADESH</item>
+        <item>BARBADOS</item>
+        <item>BELARUS</item>
+        <item>BELGIUM</item>
+        <item>BELIZE</item>
+        <item>BENIN</item>
+        <item>BERMUDA</item>
+        <item>BHUTAN</item>
+        <item>BOLIVIA</item>
+        <item>BOSNIA AND HERZEGOVINA</item>
+        <item>BOTSWANA</item>
+        <item>BOUVET ISLAND</item>
+        <item>BRAZIL</item>
+        <item>BRITISH INDIAN OCEAN TERRITORY</item>
+        <item>BRUNEI DARUSSALAM</item>
+        <item>BULGARIA</item>
+        <item>BURKINA FASO</item>
+        <item>BURUNDI</item>
+        <item>CAMBODIA</item>
+        <item>CAMEROON</item>
+        <item>CANADA</item>
+        <item>CAPE VERDE</item>
+        <item>CAYMAN ISLANDS</item>
+        <item>CENTRAL AFRICAN REPUBLIC</item>
+        <item>CHAD</item>
+        <item>CHILE</item>
+        <item>CHINA</item>
+        <item>CHRISTMAS ISLAND</item>
+        <item>COCOS (KEELING) ISLANDS</item>
+        <item>COLOMBIA</item>
+        <item>COMOROS</item>
+        <item>CONGO</item>
+        <item>CONGO, THE DEMOCRATIC REPUBLIC OF THE</item>
+        <item>COOK ISLANDS</item>
+        <item>COSTA RICA</item>
+        <item>COTE D\'IVOIRE</item>
+        <item>CROATIA</item>
+        <item>CUBA</item>
+        <item>CYPRUS</item>
+        <item>CZECH REPUBLIC</item>
+        <item>DENMARK</item>
+        <item>DJIBOUTI</item>
+        <item>DOMINICA</item>
+        <item>DOMINICAN REPUBLIC</item>
+        <item>ECUADOR</item>
+        <item>EGYPT</item>
+        <item>EL SALVADOR</item>
+        <item>EQUATORIAL GUINEA</item>
+        <item>ERITREA</item>
+        <item>ESTONIA</item>
+        <item>ETHIOPIA</item>
+        <item>FALKLAND ISLANDS (MALVINAS)</item>
+        <item>FAROE ISLANDS</item>
+        <item>FIJI</item>
+        <item>FINLAND</item>
+        <item>FRANCE</item>
+        <item>FRENCH GUIANA</item>
+        <item>FRENCH POLYNESIA</item>
+        <item>FRENCH SOUTHERN TERRITORIES</item>
+        <item>GABON</item>
+        <item>GAMBIA</item>
+        <item>GEORGIA</item>
+        <item>GERMANY</item>
+        <item>GIBRALTAR</item>
+        <item>GREECE</item>
+        <item>GREENLAND</item>
+        <item>GRENADA</item>
+        <item>GUADELOUPE</item>
+        <item>GUAM</item>
+        <item>GUATEMALA</item>
+        <item>GUINEA</item>
+        <item>GUINEA-BISSAU</item>
+        <item>GUYANA</item>
+        <item>HAITI</item>
+        <item>HEARD ISLAND AND MCDONALD ISLANDS</item>
+        <item>HOLY SEE (VATICAN CITY STATE)</item>
+        <item>HONDURAS</item>
+        <item>HONG KONG</item>
+        <item>HUNGARY</item>
+        <item>ICELAND</item>
+        <item>INDIA</item>
+        <item>INDONESIA</item>
+        <item>IRAN, ISLAMIC REPUBLIC OF</item>
+        <item>IRAQ</item>
+        <item>IRELAND</item>
+        <item>ISRAEL</item>
+        <item>ITALY</item>
+        <item>JAMAICA</item>
+        <item>JAPAN</item>
+        <item>JORDAN</item>
+        <item>KAZAKHSTAN</item>
+        <item>KENYA</item>
+        <item>KIRIBATI</item>
+        <item>KOREA, DEMOCRATIC PEOPLE\'S REPUBLIC OF</item>
+        <item>KOREA, REPUBLIC OF</item>
+        <item>KUWAIT</item>
+        <item>KYRGYZSTAN</item>
+        <item>LAO PEOPLE\'S DEMOCRATIC REPUBLIC</item>
+        <item>LATVIA</item>
+        <item>LEBANON</item>
+        <item>LESOTHO</item>
+        <item>LIBERIA</item>
+        <item>LIBYAN ARAB JAMAHIRIYA</item>
+        <item>LIECHTENSTEIN</item>
+        <item>LITHUANIA</item>
+        <item>LUXEMBOURG</item>
+        <item>MACAO</item>
+        <item>MACEDONIA, THE FORMER YUGOSLAV REPUBLIC OF</item>
+        <item>MADAGASCAR</item>
+        <item>MALAWI</item>
+        <item>MALAYSIA</item>
+        <item>MALDIVES</item>
+        <item>MALI</item>
+        <item>MALTA</item>
+        <item>MARSHALL ISLANDS</item>
+        <item>MARTINIQUE</item>
+        <item>MAURITANIA</item>
+        <item>MAURITIUS</item>
+        <item>MAYOTTE</item>
+        <item>MEXICO</item>
+        <item>MICRONESIA, FEDERATED STATES OF</item>
+        <item>MOLDOVA, REPUBLIC OF</item>
+        <item>MONACO</item>
+        <item>MONGOLIA</item>
+        <item>MONTSERRAT</item>
+        <item>MOROCCO</item>
+        <item>MOZAMBIQUE</item>
+        <item>MYANMAR</item>
+        <item>NAMIBIA</item>
+        <item>NAURU</item>
+        <item>NEPAL</item>
+        <item>NETHERLANDS</item>
+        <item>NETHERLANDS ANTILLES</item>
+        <item>NEW CALEDONIA</item>
+        <item>NEW ZEALAND</item>
+        <item>NICARAGUA</item>
+        <item>NIGER</item>
+        <item>NIGERIA</item>
+        <item>NIUE</item>
+        <item>NORFOLK ISLAND</item>
+        <item>NORTHERN MARIANA ISLANDS</item>
+        <item>NORWAY</item>
+        <item>OMAN</item>
+        <item>PAKISTAN</item>
+        <item>PALAU</item>
+        <item>PALESTINIAN TERRITORY, OCCUPIED</item>
+        <item>PANAMA</item>
+        <item>PAPUA NEW GUINEA</item>
+        <item>PARAGUAY</item>
+        <item>PERU</item>
+        <item>PHILIPPINES</item>
+        <item>PITCAIRN</item>
+        <item>POLAND</item>
+        <item>PORTUGAL</item>
+        <item>PUERTO RICO</item>
+        <item>QATAR</item>
+        <item>REUNION</item>
+        <item>ROMANIA</item>
+        <item>RUSSIAN FEDERATION</item>
+        <item>RWANDA</item>
+        <item>SAINT HELENA</item>
+        <item>SAINT KITTS AND NEVIS</item>
+        <item>SAINT LUCIA</item>
+        <item>SAINT PIERRE AND MIQUELON</item>
+        <item>SAINT VINCENT AND THE GRENADINES</item>
+        <item>SAMOA</item>
+        <item>SAN MARINO</item>
+        <item>SAO TOME AND PRINCIPE</item>
+        <item>SAUDI ARABIA</item>
+        <item>SENEGAL</item>
+        <item>SERBIA AND MONTENEGRO</item>
+        <item>SEYCHELLES</item>
+        <item>SIERRA LEONE</item>
+        <item>SINGAPORE</item>
+        <item>SLOVAKIA</item>
+        <item>SLOVENIA</item>
+        <item>SOLOMON ISLANDS</item>
+        <item>SOMALIA</item>
+        <item>SOUTH AFRICA</item>
+        <item>SOUTH GEORGIA AND THE SOUTH SANDWICH ISLANDS</item>
+        <item>SPAIN</item>
+        <item>SRI LANKA</item>
+        <item>SUDAN</item>
+        <item>SURINAME</item>
+        <item>SVALBARD AND JAN MAYEN</item>
+        <item>SWAZILAND</item>
+        <item>SWEDEN</item>
+        <item>SWITZERLAND</item>
+        <item>SYRIAN ARAB REPUBLIC</item>
+        <item>TAIWAN, PROVINCE OF CHINA</item>
+        <item>TAJIKISTAN</item>
+        <item>TANZANIA, UNITED REPUBLIC OF</item>
+        <item>THAILAND</item>
+        <item>TIMOR-LESTE</item>
+        <item>TOGO</item>
+        <item>TOKELAU</item>
+        <item>TONGA</item>
+        <item>TRINIDAD AND TOBAGO</item>
+        <item>TUNISIA</item>
+        <item>TURKEY</item>
+        <item>TURKMENISTAN</item>
+        <item>TURKS AND CAICOS ISLANDS</item>
+        <item>TUVALU</item>
+        <item>UGANDA</item>
+        <item>UKRAINE</item>
+        <item>UNITED ARAB EMIRATES</item>
+        <item>UNITED KINGDOM</item>
+        <item>UNITED STATES</item>
+        <item>UNITED STATES MINOR OUTLYING ISLANDS</item>
+        <item>URUGUAY</item>
+        <item>UZBEKISTAN</item>
+        <item>VANUATU</item>
+        <item>VENEZUELA</item>
+        <item>VIET NAM</item>
+        <item>VIRGIN ISLANDS, BRITISH</item>
+        <item>VIRGIN ISLANDS, U.S.</item>
+        <item>WALLIS AND FUTUNA</item>
+        <item>WESTERN SAHARA</item>
+        <item>YEMEN</item>
+        <item>ZAMBIA</item>
+        <item>ZIMBABWE</item>
+    </string-array>
+
+
+    <string-array name="fragment_signup_personalstage2_countries_codes_array">
+        <item></item>
+        <item>+233</item>
+        <item>+93</item>
+        <item>+355</item>
+        <item>+213</item>
+        <item>+1684</item>
+        <item>+376</item>
+        <item>+244</item>
+        <item>+1264</item>
+        <item>+0</item>
+        <item>+1268</item>
+        <item>+54</item>
+        <item>+374</item>
+        <item>+297</item>
+        <item>+61</item>
+        <item>+43</item>
+        <item>+994</item>
+        <item>+1242</item>
+        <item>+973</item>
+        <item>+880</item>
+        <item>+1246</item>
+        <item>+375</item>
+        <item>+32</item>
+        <item>+501</item>
+        <item>+229</item>
+        <item>+1441</item>
+        <item>+975</item>
+        <item>+591</item>
+        <item>+387</item>
+        <item>+267</item>
+        <item>+0</item>
+        <item>+55</item>
+        <item>+246</item>
+        <item>+673</item>
+        <item>+359</item>
+        <item>+226</item>
+        <item>+257</item>
+        <item>+855</item>
+        <item>+237</item>
+        <item>+1</item>
+        <item>+238</item>
+        <item>+1345</item>
+        <item>+236</item>
+        <item>+235</item>
+        <item>+56</item>
+        <item>+86</item>
+        <item>+61</item>
+        <item>+672</item>
+        <item>+57</item>
+        <item>+269</item>
+        <item>+242</item>
+        <item>+242</item>
+        <item>+682</item>
+        <item>+506</item>
+        <item>+225</item>
+        <item>+385</item>
+        <item>+53</item>
+        <item>+357</item>
+        <item>+420</item>
+        <item>+45</item>
+        <item>+253</item>
+        <item>+1767</item>
+        <item>+1809</item>
+        <item>+593</item>
+        <item>+20</item>
+        <item>+503</item>
+        <item>+240</item>
+        <item>+291</item>
+        <item>+372</item>
+        <item>+251</item>
+        <item>+500</item>
+        <item>+298</item>
+        <item>+679</item>
+        <item>+358</item>
+        <item>+33</item>
+        <item>+594</item>
+        <item>+689</item>
+        <item>+0</item>
+        <item>+241</item>
+        <item>+220</item>
+        <item>+995</item>
+        <item>+49</item>
+        <item>+350</item>
+        <item>+30</item>
+        <item>+299</item>
+        <item>+1473</item>
+        <item>+590</item>
+        <item>+1671</item>
+        <item>+502</item>
+        <item>+224</item>
+        <item>+245</item>
+        <item>+592</item>
+        <item>+509</item>
+        <item>+0</item>
+        <item>+39</item>
+        <item>+504</item>
+        <item>+852</item>
+        <item>+36</item>
+        <item>+354</item>
+        <item>+91</item>
+        <item>+62</item>
+        <item>+98</item>
+        <item>+964</item>
+        <item>+353</item>
+        <item>+972</item>
+        <item>+39</item>
+        <item>+1876</item>
+        <item>+81</item>
+        <item>+962</item>
+        <item>+7</item>
+        <item>+254</item>
+        <item>+686</item>
+        <item>+850</item>
+        <item>+82</item>
+        <item>+965</item>
+        <item>+996</item>
+        <item>+856</item>
+        <item>+371</item>
+        <item>+961</item>
+        <item>+266</item>
+        <item>+231</item>
+        <item>+218</item>
+        <item>+423</item>
+        <item>+370</item>
+        <item>+352</item>
+        <item>+853</item>
+        <item>+389</item>
+        <item>+261</item>
+        <item>+265</item>
+        <item>+60</item>
+        <item>+960</item>
+        <item>+223</item>
+        <item>+356</item>
+        <item>+692</item>
+        <item>+596</item>
+        <item>+222</item>
+        <item>+230</item>
+        <item>+269</item>
+        <item>+52</item>
+        <item>+691</item>
+        <item>+373</item>
+        <item>+377</item>
+        <item>+976</item>
+        <item>+1664</item>
+        <item>+212</item>
+        <item>+258</item>
+        <item>+95</item>
+        <item>+264</item>
+        <item>+674</item>
+        <item>+977</item>
+        <item>+31</item>
+        <item>+599</item>
+        <item>+687</item>
+        <item>+64</item>
+        <item>+505</item>
+        <item>+227</item>
+        <item>+234</item>
+        <item>+683</item>
+        <item>+672</item>
+        <item>+1670</item>
+        <item>+47</item>
+        <item>+968</item>
+        <item>+92</item>
+        <item>+680</item>
+        <item>+970</item>
+        <item>+507</item>
+        <item>+675</item>
+        <item>+595</item>
+        <item>+51</item>
+        <item>+63</item>
+        <item>+0</item>
+        <item>+48</item>
+        <item>+351</item>
+        <item>+1787</item>
+        <item>+974</item>
+        <item>+262</item>
+        <item>+40</item>
+        <item>+70</item>
+        <item>+250</item>
+        <item>+290</item>
+        <item>+1869</item>
+        <item>+1758</item>
+        <item>+508</item>
+        <item>+1784</item>
+        <item>+684</item>
+        <item>+378</item>
+        <item>+239</item>
+        <item>+966</item>
+        <item>+221</item>
+        <item>+381</item>
+        <item>+248</item>
+        <item>+232</item>
+        <item>+65</item>
+        <item>+421</item>
+        <item>+386</item>
+        <item>+677</item>
+        <item>+252</item>
+        <item>+27</item>
+        <item>+0</item>
+        <item>+34</item>
+        <item>+94</item>
+        <item>+249</item>
+        <item>+597</item>
+        <item>+47</item>
+        <item>+268</item>
+        <item>+46</item>
+        <item>+41</item>
+        <item>+963</item>
+        <item>+886</item>
+        <item>+992</item>
+        <item>+255</item>
+        <item>+66</item>
+        <item>+670</item>
+        <item>+228</item>
+        <item>+690</item>
+        <item>+676</item>
+        <item>+1868</item>
+        <item>+216</item>
+        <item>+90</item>
+        <item>+7370</item>
+        <item>+1649</item>
+        <item>+688</item>
+        <item>+256</item>
+        <item>+380</item>
+        <item>+971</item>
+        <item>+44</item>
+        <item>+1</item>
+        <item>+1</item>
+        <item>+598</item>
+        <item>+998</item>
+        <item>+678</item>
+        <item>+58</item>
+        <item>+84</item>
+        <item>+1284</item>
+        <item>+1340</item>
+        <item>+681</item>
+        <item>+212</item>
+        <item>+967</item>
+        <item>+260</item>
+        <item>+263</item>
+    </string-array>
+
+    <string name="error">Error</string>
+    <string name="an_unexpected_error_occured">An unexpected error occurred</string>
+    <string name="check_your_internet_connection_and_try_again">check your internet connection and try again</string>
 </resources>
