--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -492,4 +492,6 @@
     <string name="error">Error</string>
     <string name="an_unexpected_error_occured">An unexpected error occurred</string>
     <string name="check_your_internet_connection_and_try_again">check your internet connection and try again</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
